compilador/test_programs/invalid/05_undefined_function.patito
programa undefined_func;
vars:
    x: entero;

inicio {
    x = foo(5);
    escribe(x);
}
fin
